--- a/client/sass/_buttons.scss
+++ b/client/sass/_buttons.scss
@@ -6,6 +6,8 @@
 	margin-top: 0;
 	padding: .8em 1em;
 	border-radius: 0.5em;
+
+	cursor: pointer;
 }
 .silver{
 	background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #efefef), color-stop(1, #f7f7f7));
