--- a/client/views/tipstricks.html
+++ b/client/views/tipstricks.html
@@ -1,6 +1,6 @@
 <template name="tipstricks">
 	<div class="Modal-Background toggle-Modal is-Hidden" id='tipstricks-modal'>
-		<div class="Center-Block Absolute-Center is-Fixed is-Variable Modal long" id="Fixed-Modal">
+		<div class="Modal Center-Block" id="Fixed-Modal">
 			<div class="Center-Content">
 				<header><h1>Manual</h1></header>
 				<section>
