--- a/client/views/invite.html
+++ b/client/views/invite.html
@@ -10,10 +10,9 @@
 					</div>
 					or use these social networks to invite people to join this chat!
 					<div style="text-align: center; margin-top: 1em;">
-						<a href="#" class="social-invite twitter"></a>
-						<a href="#" class="social-invite github"></a>
-						<a href="#" class="social-invite facebook"></a>
-						<a href="#" class="social-invite google"></a>
+						<a href="http://twitter.com/intent/tweet?text=Chat%20with%20me%20in%20realtime%20on%20&url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite twitter" target="_blank"></a>
+						<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite facebook" target="_blank"></a>
+						<a href="https://plus.google.com/share?url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite google" target="_blank"></a>
 					</div>
 				</section>
 			</div>
