--- a/client/sass/_sidebar.scss
+++ b/client/sass/_sidebar.scss
@@ -144,7 +144,7 @@
 		z-index: 899;
 		background-image: url('/images/pattern-white-high-res.png');
 		background-color: $color-main;
-		position: fixed;
+		position: absolute;
 		width: 100%;
 		top: 0;
 		left: 0;
