--- a/client/views/welcome.html
+++ b/client/views/welcome.html
@@ -172,7 +172,7 @@
 					<li>don't be a jerk.</li>
 					<li>I cannot be held liable in any way for anything that happened on this web service. fu</li>
 					<li>don't be a jerk.</li>
-					<li>It <b>is</b> possible that messages get deleted without notice</li>
+					<li>It <b>is</b> possible that messages could be deleted without notice</li>
 					<li>don't be a jerk.</li>
 				</ul>
 				<br>
@@ -181,18 +181,21 @@
 			</div>
 			<br/>
 
-			<p>
-				<p>
-					Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a>
-				</p>
-				<p>
-					proudly hosted on <a href="https://www.digitalocean.com/?refcode=880e8f681b50" target='_blank'>DigitalOcean</a>
-				</p>
-				<br><br>
-				<p>Special thanks to:</p>
-				<p><a href="https://twitter.com/grigi0">@grigi0</a> &middot; <a href="https://twitter.com/TimPietrusky">@TimPietrusky</a> &middot; <a href="https://twitter.com/Francext">@Francext </a> &middot; <a href="https://twitter.com/lrsbck">@lrsbck</a> &middot; <a href="https://twitter.com/EddHere">@EddHere</a> &middot; <a href="https://twitter.com/LukyVJ">@LukyVJ</a> &middot; <a href="https://twitter.com/CrocoDillon">@CrocoDillon</a> &middot; <a href="https://twitter.com/SaraSoueidan">@SaraSoueidan</a> &middot; <a href="https://twitter.com/DerVonDenBergen">@DerVonDenBergen</a> &middot; <a href="https://twitter.com/jshawl">@jshawl</a> &middot; <a href="https://twitter.com/_kevinatari">@_kevinatari</a> and all the other awesome contributors</p>
-			</p>
+			<p>Special thanks to:</p>
+			<p><a href="https://twitter.com/grigi0">@grigi0</a> &middot; <a href="https://twitter.com/TimPietrusky">@TimPietrusky</a> &middot; <a href="https://twitter.com/Francext">@Francext </a> &middot; <a href="https://twitter.com/lrsbck">@lrsbck</a> &middot; <a href="https://twitter.com/EddHere">@EddHere</a> &middot; <a href="https://twitter.com/LukyVJ">@LukyVJ</a> &middot; <a href="https://twitter.com/CrocoDillon">@CrocoDillon</a> &middot; <a href="https://twitter.com/SaraSoueidan">@SaraSoueidan</a> &middot; <a href="https://twitter.com/DerVonDenBergen">@DerVonDenBergen</a> &middot; <a href="https://twitter.com/jshawl">@jshawl</a> &middot; <a href="https://twitter.com/_kevinatari">@_kevinatari</a> and all the other awesome contributors</p>
 			<br>
+			<p>Credits</p>
+			<p><a href="http://adamwhitcroft.com/batch/">batch by Adam Whitcroft</a> &middot; <a href="http://timpietrusky.com/_select/">_select.js by Tim Pietrusky</a></p>
+			
+			<br>
+			<br>
+			
+			<p>
+				Made with love by <a href="https://twitter.com/christian_fei" target='_blank'>christian_fei</a> with <a href="http://meteor.com">Meteor</a>
+			</p>
+			<p>
+				proudly hosted on <a href="https://www.digitalocean.com/?refcode=880e8f681b50" target='_blank'>DigitalOcean</a>
+			</p>
 			<br>
 			<p style='text-align:center'>&copy; right now ~ opentalk.me</p>
 			
