--- a/client/css/main.css
+++ b/client/css/main.css
@@ -959,7 +959,7 @@ audio {
     z-index: 899;
     background-image: url("/images/pattern-white-high-res.png");
     background-color: #ffd100;
-    position: fixed;
+    position: absolute;
     width: 100%;
     top: 0;
     left: 0;
@@ -2511,8 +2511,7 @@ Modernizr test adds ".absolutecentercontent" to <html> if the browser will cente
 /* line 230, ../sass/_modal.scss */
 .Modal {
   position: absolute;
-  top: 45%;
-  margin-top: -20%;
+  top: 15%;
   left: 50%;
   margin-left: -17.5em;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
@@ -2521,7 +2520,8 @@ Modernizr test adds ".absolutecentercontent" to <html> if the browser will cente
   background: white;
   max-width: 35em;
   width: 93%;
-  max-height: 40em;
+  overflow-y: auto;
+  max-height: 70%;
   border-radius: .6em;
 }
 @media all and (max-width: 35em) {
