--- a/client/views/invite.html
+++ b/client/views/invite.html
@@ -4,16 +4,15 @@
 			<div class="Center-Content">
 				<header><h1>Invite people</h1></header>
 				<section>
-					Simply share this url if you have something to discuss quickly 
-					<div style="text-align: center;">
+					Simply share this url
+					<div style="text-align:center;margin-bottom:1em;">
 						<span class="share-url">http://opentalk.me/{{room}}</span>
+						<br>
+							<a href="http://twitter.com/intent/tweet?text=Chat%20with%20me%20in%20realtime%20on%20&url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite twitter" target="_blank"></a>
+							<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite facebook" target="_blank"></a>
+							<a href="https://plus.google.com/share?url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite google" target="_blank"></a>
 					</div>
-					or use these social networks to invite people to join this chat!
-					<div style="text-align: center; margin-top: 1em;">
-						<a href="http://twitter.com/intent/tweet?text=Chat%20with%20me%20in%20realtime%20on%20&url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite twitter" target="_blank"></a>
-						<a href="http://www.facebook.com/sharer.php?u=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite facebook" target="_blank"></a>
-						<a href="https://plus.google.com/share?url=http%3A%2F%2Fopentalk.me/{{room}}" class="social-invite google" target="_blank"></a>
-					</div>
+					to invite people to your chatroom!
 				</section>
 			</div>
 		</div>
