--- a/client/templates/room.html
+++ b/client/templates/room.html
@@ -47,7 +47,7 @@
 		{{/isolate}}
 		{{#isolate}}
 			<ul class="tags">
-				<li><h6>tags</h6></li>
+				<li><h6>tags <span class="hint">?</span></h6></li>
 				{{#each roomTags}}
 					<li class="tag">{{this}}</li>
 				{{/each}}
